test/users/brodtkorb/coercionQuestion.good
coercionQuestion.chpl:2: error: unresolved call '<=(1.1, 1)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note: candidates are: <=(a: int(32), b: int(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: int(64), b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(32), b: uint(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(64), b: uint(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: string, b: string)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: int(32), param b: int(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: int(64), param b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: uint(32), param b: uint(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: uint(64), param b: uint(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: enumerated, param b: enumerated)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: string, param b: string)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(64), b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: int(64), b: uint(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: uint(64), param b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: int(64), param b: uint(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: uint(64), param b: int(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(param a: int(64), b: uint(64))
$CHPL_HOME/modules/internal/ChapelTuple.chpl:: note:                 <=(a: _tuple, b: _tuple)
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: real(32), b: real(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: real(64), b: real(64))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: imag(32), b: imag(32))
$CHPL_HOME/modules/internal/ChapelBase.chpl:: note:                 <=(a: imag(64), b: imag(64))
