test/users/brodtkorb/coercionQuestion.chpl
writeln(1.1 <= 1);
writeln(1.1 <= 1:bool);
